[metadata]
name = vimoku
version = attr: vimoku.__version__
description = Edit pages of a dokuwiki instance with your favorite editor
long_description = file: README.mkd
long_description_content_type = text/markdown
author = Lucas Bourneuf
author_email = lucas.bourneuf@laposte.net
url = https://github.com/aluriak/vimoku
license = GPLv3
keywords = wiki editor
classifiers =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
include_package_data = True
modules = vimoku
install_requires =
    dokuwikixmlrpc==2020.5.23

[zest.releaser]
create-wheel = yes
python-file-with-version = vimoku.py
